# sandbox4plugins

./: .gitignore  Makefile.am  README.md  config.h  configure.ac  dylib.cc  dylib.hh  exception.cc  exception.hh  exportdef.hh  main.cc  plugin.cc  plugin.h  plugin.hh  pluginfactory.cc  pluginfactory.hh  pluginfactory_timple.hh  runall.sh  runnew.sh  runold.sh
host/: Makefile.am  dylib.cc  exception.hh  exportdef.hh  plugin.cc  pluginfactory.cc
include/: exportdef.hh  plugin.h
legacy/: Makefile.am  pluginC.c  pluginCC.cc
m4/: iem_operatingsystem.m4
old/: Makefile.am  plugin.hh  pluginC.c  pluginfactory_timple.hh
plugins/: Makefile.am  pluginCC_1.cc  pluginCC_2.cc  pluginC_0.c  pluginC_1.c  plugin_1.cc  plugin_2.cc  simple.cc
test/: hello.cc
